scrollbar fix

--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -46,6 +46,8 @@ img{
 
  html{
   font-size: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 section {
