--- a/assets/styles/page-content.css
+++ b/assets/styles/page-content.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   justify-self: center;
+  text-align: center;
 }                
 
 .page-title{
